--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -67,6 +67,48 @@ body{
   border-style: solid;
   //margin: 10px;
   .ticket-module-head{
+    .orders{
+      overflow: auto;
+      padding-top: 1px; // to handle moving parent div
+      margin-top: -1px; //
+      background-color: #f2f2f2;
+      height: 55vh;
+      .row{
+        padding: 2vh 0;
+        margin: 2vh .5vw;
+        background: white;
+        box-shadow: 0px 10px 15px rgba(128, 128, 128, 0.1)
+      }
+      .order-text{
+        border-left: 4px;
+        border-right: 0;
+        border-style: solid;
+        border-top: 0;
+        border-bottom: 0;
+        padding-left: 10px;
+        margin-left: 1vw;
+        border-color: #f1b850;
+        .order-text-section{
+          font-size: .8em;
+          font-weight: bold;
+        }
+        .order-text-seatNo{
+          font-size: .9em;
+        }
+      }
+      .order-price{
+        .price{
+          display: flex;
+          justify-content: flex-end;
+        }
+        .cancel{
+          font-size: .65em;
+          font-weight:bold;
+          float: right;
+          color:red;
+        }
+      }
+    }
     .orders-title{
       background: #444444;
       color: white;
@@ -75,6 +117,9 @@ body{
       }
     }
     .concert-detail{
+      .row{
+        width:100%
+      }
       height: 10vh;
       display: flex;
       background: #f1b850;
@@ -89,7 +134,7 @@ body{
       }
       .concert-title{
         display: flex;
-        font-size: .80em;
+        font-size: 1.1em;
         font-weight: bold;
         align-items: center;
         padding-right: 0px;
@@ -102,6 +147,7 @@ body{
       width: 100%;
       border-radius: 0%;
       &::after{
+        margin-left: 10em;
         color: #b6b4b4;
       }
       .dropdown-container{
@@ -121,7 +167,7 @@ body{
 .container-vanilla{
   margin-left: 0;
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 30% 70%;
   height: 95vh;
 }
 .venue{
