--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+//@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
@@ -67,6 +67,29 @@ body{
   border-style: solid;
   //margin: 10px;
   .ticket-module-head{
+    .summary{
+      padding-top:1vh;
+      .total-price{
+        .price{
+          text-align: right;
+          padding-right: 1.5vw;
+        }
+        .btn-container{
+          text-align:center
+        }
+      }
+      .summary-container{
+        .sale{
+          text-align:left;
+          .sale-container{
+            padding: 0.05vh 1.5vw;
+            .total-price{
+              float:right;
+            }
+          }
+        }
+      }
+    }
     .orders{
       overflow: auto;
       padding-top: 1px; // to handle moving parent div
@@ -171,6 +194,7 @@ body{
   height: 95vh;
 }
 .venue{
+  background: #f2f2f2;
   margin: 1.5vh 0;
   margin-right: 1vh;
 }
@@ -187,6 +211,9 @@ body{
   height: 2.5vh;
   border-style: solid;
   margin-bottom: 5px;
+  &::after{
+    content:"";
+  }
 }
 .venue .clickables{
   margin-left: 3vw;
