--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11705,9 +11705,8 @@ body {
           justify-content: flex-end;
 }
 
-.ticket-module {
-  border: 1px;
-  border-style: solid;
+.ticket-module .ticket-module-head {
+  background: white;
 }
 
 .ticket-module .ticket-module-head .summary {
@@ -11740,7 +11739,7 @@ body {
   padding-top: 1px;
   margin-top: -1px;
   background-color: #f2f2f2;
-  height: 55vh;
+  height: 50vh;
 }
 
 .ticket-module .ticket-module-head .orders .row {
@@ -11864,17 +11863,19 @@ body {
 .container-vanilla {
   margin-left: 0;
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 25% 75%;
   height: 95vh;
 }
 
 .venue {
+  overflow: auto;
   background: #f2f2f2;
-  margin: 1.5vh 0;
   margin-right: 1vh;
 }
 
 .stage {
+  width: 75%;
+  margin: 3vh auto;
   text-align: center;
   border: 1px;
   border-style: solid;
@@ -11882,9 +11883,12 @@ body {
 }
 
 .seat {
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(128, 128, 128, 0.8) inset;
+          box-shadow: 1px 1px 1px 1px rgba(128, 128, 128, 0.8) inset;
+  background: white;
+  border-radius: 50%;
   border: 1px;
-  height: 2.5vh;
-  border-style: solid;
+  height: 3.5vh;
   margin-bottom: 5px;
 }
 
@@ -11892,23 +11896,20 @@ body {
   content: "";
 }
 
-.venue .clickables {
+.venue .clickables .clickables-container {
   margin-left: 3vw;
   font-size: .75em;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
 }
 
 .section {
-  padding: 10px;
+  justify-items: center;
   display: grid;
   grid-template-rows: repeat(15, 1fr);
-  max-width: 22.5vw;
 }
 
 .row-notBS {
   display: grid;
-  grid-template-columns: repeat(15, 1fr);
   grid-column-gap: 5px;
 }
 
