front end done-ish

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11644,6 +11644,26 @@ a.text-dark:focus {
   src: url("/fonts/Quicksand-Regular.ttf");
 }
 
+@font-face {
+  font-family: Montserrat_SemiBold;
+  src: url("/fonts/Montserrat/Montserrat-SemiBold.ttf");
+}
+
+@font-face {
+  font-family: Montserrat_Regular;
+  src: url("/fonts/Montserrat/Montserrat-Regular.ttf");
+}
+
+@font-face {
+  font-family: Montserrat_Light;
+  src: url("/fonts/Montserrat/Montserrat-Light.ttf");
+}
+
+@font-face {
+  font-family: bebas_neue_regular;
+  src: url("/fonts/bebas_neue/BebasNeue-Regular.ttf");
+}
+
 body {
   font-family: "Quicksand";
 }
@@ -11706,6 +11726,7 @@ body {
 }
 
 .ticket-module .ticket-module-head {
+  font-family: Montserrat_Regular;
   background: white;
 }
 
@@ -11730,8 +11751,14 @@ body {
   padding: 0.05vh 1.5vw;
 }
 
+.ticket-module .ticket-module-head .summary .summary-container .sale .sale-container .sale-ticket-section {
+  color: #9b9b9b;
+}
+
 .ticket-module .ticket-module-head .summary .summary-container .sale .sale-container .total-price {
   float: right;
+  color: #9b9b9b;
+  font-weight: bold;
 }
 
 .ticket-module .ticket-module-head .orders {
@@ -11743,6 +11770,7 @@ body {
 }
 
 .ticket-module .ticket-module-head .orders .row {
+  border-radius: 8px;
   padding: 2vh 0;
   margin: 2vh .5vw;
   background: white;
@@ -11762,12 +11790,13 @@ body {
 }
 
 .ticket-module .ticket-module-head .orders .order-text .order-text-section {
-  font-size: .8em;
+  font-size: 1em;
   font-weight: bold;
 }
 
 .ticket-module .ticket-module-head .orders .order-text .order-text-seatNo {
   font-size: .9em;
+  color: #9b9b9b;
 }
 
 .ticket-module .ticket-module-head .orders .order-price .price {
@@ -11780,6 +11809,7 @@ body {
 }
 
 .ticket-module .ticket-module-head .orders .order-price .cancel {
+  cursor: pointer;
   font-size: .65em;
   font-weight: bold;
   float: right;
@@ -11789,6 +11819,7 @@ body {
 .ticket-module .ticket-module-head .orders-title {
   background: #444444;
   color: white;
+  font-family: Montserrat_SemiBold;
 }
 
 .ticket-module .ticket-module-head .orders-title span {
@@ -11818,16 +11849,17 @@ body {
 }
 
 .ticket-module .ticket-module-head .concert-detail .abs-logo img {
-  height: 8vh;
-  float: right;
+  height: 7vh;
+  padding-left: 1vw;
 }
 
 .ticket-module .ticket-module-head .concert-detail .concert-title {
+  font-family: bebas_neue_regular;
+  color: #444444;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 1.1em;
-  font-weight: bold;
+  font-size: 1.5em;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -11843,7 +11875,7 @@ body {
 }
 
 .ticket-module .ticket-module-head #dropdown-date::after {
-  margin-left: 10em;
+  margin-left: 5em;
   color: #b6b4b4;
 }
 
@@ -11879,21 +11911,35 @@ body {
   text-align: center;
   border: 1px;
   border-style: solid;
-  border-color: black;
+  border-color: #00000054;
+  padding: 1vh;
 }
 
 .seat {
   -webkit-box-shadow: 1px 1px 1px 1px rgba(128, 128, 128, 0.8) inset;
           box-shadow: 1px 1px 1px 1px rgba(128, 128, 128, 0.8) inset;
-  background: white;
   border-radius: 50%;
   border: 1px;
   height: 3.5vh;
+  -webkit-transition: background-color .2s;
+  transition: background-color .2s;
   margin-bottom: 5px;
 }
 
 .seat::after {
   content: "";
+}
+
+.seat-reserved {
+  background-color: #2741af;
+}
+
+.seat-not-taken {
+  background-color: white;
+}
+
+.seat-taken {
+  background-color: #f1b850;
 }
 
 .venue .clickables .clickables-container {
