--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11672,6 +11672,149 @@ body {
   margin: 0;
 }
 
+.home {
+  height: 89vh;
+  margin: 0px;
+  background: #f2f2f28a;
+}
+
+.home .row {
+  padding: 0px;
+}
+
+.home .main-info {
+  color: #707070;
+  background: #f8fafc;
+  padding: 0;
+}
+
+.home .main-info .breakdown h4 {
+  margin-bottom: 3vh;
+  font-weight: bold;
+  margin-top: 23vh;
+  margin-left: 3vw;
+}
+
+.home .main-info .breakdown .breakdown-item {
+  margin: 4vh 1vw;
+}
+
+.home .main-info .breakdown .breakdown-item .breakdown-order {
+  border-left: 4px;
+  border-style: solid;
+  border-right: 0;
+  border-bottom: 0;
+  border-top: 0;
+  margin-left: 1vw;
+}
+
+.home .main-info .breakdown .breakdown-item .breakdown-order .sale-order {
+  font-weight: bold;
+}
+
+.home .main-info .breakdown .breakdown-item .breakdown-functions {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.home .main-info .summary-main-container {
+  font-size: 1.2em;
+  margin-top: 5vh;
+  width: 110%;
+  float: right;
+  background: #292C31;
+  left: -5vh;
+}
+
+.home .main-info .summary-main-container .summary-main {
+  -webkit-box-shadow: 1px 10px 15px rgba(128, 128, 128, 0.6);
+          box-shadow: 1px 10px 15px rgba(128, 128, 128, 0.6);
+}
+
+.home .main-info .summary-main-container .rev-today {
+  margin: 3vh 6vh;
+  color: white;
+  display: inline-block;
+}
+
+.home .main-info .summary-main-container .tickets-sold {
+  margin-right: 5vh;
+  color: white;
+  display: inline-block;
+}
+
+.home .side-bar {
+  margin-top: 5vh;
+  border-left: 0px;
+  /* border-style: solid; */
+  border-top: 0px;
+  border-bottom: 0px;
+  border-right: 1px;
+  border-style: solid;
+  border-color: #7070704a;
+  height: 80vh;
+}
+
+.home .side-bar .main-info {
+  background: #f8fafc;
+  padding-right: 0px;
+}
+
+.home .side-bar .row {
+  margin: 0px;
+}
+
+.home .side-bar .side-icon {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 5vh 0px;
+}
+
+.home .side-bar .side-icon img {
+  border: 0;
+  border-bottom: 1px;
+  border-style: solid;
+  color: #f5f6f7;
+  -webkit-transition: color .2s;
+  transition: color .2s;
+  padding-bottom: 2vh;
+  height: 7vh;
+  width: 2vw;
+  cursor: pointer;
+}
+
+.home .side-bar .side-icon img:hover {
+  color: #a7a8a9;
+}
+
+.home .side-bar .side-icon label {
+  opacity: 0;
+  position: absolute;
+  margin-left: 6.5vw;
+  border: 1px;
+  border-style: solid;
+  padding: 0 10px;
+  color: white;
+  background: #292c31;
+  border-color: black;
+  margin-top: 5px;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+}
+
+.home .side-bar .side-icon .show {
+  opacity: 1;
+}
+
+.home .side-bar .show-icon {
+  color: #a7a8a9;
+}
+
 .head {
   height: 11vh;
   margin-left: 0px;
@@ -11924,6 +12067,7 @@ body {
   -webkit-transition: background-color .2s;
   transition: background-color .2s;
   margin-bottom: 5px;
+  cursor: pointer;
 }
 
 .seat::after {
