--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -46,6 +46,124 @@ body{
   margin: 0;
 }
 
+.home{ 
+  height:89vh; //since header is 11vh
+  margin: 0px;
+  background: #f2f2f28a;
+  .row{
+    padding: 0px;
+  }
+  .main-info{
+    color: #707070;
+    background:#f8fafc;
+    padding: 0;
+    .breakdown{
+      h4{
+        margin-bottom: 3vh;
+        font-weight: bold;
+        margin-top: 23vh;
+        margin-left: 3vw;
+      }
+      .breakdown-item{
+        margin: 4vh 1vw;
+        .breakdown-order{
+          border-left: 4px;
+          border-style: solid;
+          border-right: 0;
+          border-bottom: 0;
+          border-top: 0;
+          margin-left: 1vw;
+          .sale-order{
+            font-weight: bold;
+          }
+        }
+        .breakdown-functions{
+          align-items: center;
+          display: flex;
+        }
+      }
+    }
+    .summary-main-container{
+      font-size: 1.2em;
+      margin-top: 5vh;
+      width: 110%;
+      float: right;
+      background: #292C31;
+      left: -5vh;
+      .summary-main{
+        box-shadow: 1px 10px 15px rgba(128, 128, 128, 0.6);
+      }
+      .rev-today{
+        margin: 3vh 6vh;
+        color: white;
+        display: inline-block;
+      }
+      .tickets-sold{
+        margin-right: 5vh;
+        color: white;
+        display: inline-block;
+      }
+    }
+  }
+  .side-bar{
+    .main-info{
+      background: #f8fafc;
+      padding-right: 0px;
+    }
+    margin-top: 5vh;
+    border-left: 0px;
+    /* border-style: solid; */
+    border-top: 0px;
+    border-bottom: 0px;
+    border-right: 1px;
+    border-style: solid;
+    border-color: #7070704a;
+    height: 80vh;
+    .row{
+      margin: 0px
+    }
+    .side-icon{
+      justify-content: center; //because it flexed apparently
+      margin: 5vh 0px;
+      img{
+        border: 0;
+        border-bottom: 1px;
+        border-style: solid;
+        color:#f5f6f7;
+        transition: color .2s;
+        padding-bottom: 2vh;
+        height: 7vh;
+        width: 2vw;
+        cursor: pointer;
+        &:hover{
+          color: #a7a8a9;
+        }
+      }
+      label{
+        //display: none;
+        opacity: 0;
+        position: absolute;
+        margin-left: 6.5vw;
+        border: 1px;
+        border-style: solid;
+        padding: 0 10px;
+        color: white;
+        background: #292c31;
+        border-color: black;
+        margin-top: 5px;
+        transition: opacity .2s;
+      }
+      .show{
+        opacity: 1;
+        //display:block; 
+      }
+    }
+    .show-icon{
+      color: #a7a8a9;
+    }
+  }
+}
+
 .head{
   height: 11vh;
   margin-left: 0px;
@@ -251,6 +369,8 @@ body{
   transition: background-color .2s;
   //border-style: solid;
   margin-bottom: 5px;
+  cursor:pointer;
+  
   &::after{
     content:"";
   }
