--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11682,6 +11682,20 @@ body {
   padding: 0px;
 }
 
+.home .main .main-venue {
+  border: 1px;
+  margin-top: 15vh;
+  border-style: solid;
+  height: 50vh;
+  -webkit-box-shadow: 1px 10px 15px rgba(128, 128, 128, 0.6);
+          box-shadow: 1px 10px 15px rgba(128, 128, 128, 0.6);
+  width: 60vw;
+  border-color: #c3c0c085;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin-left: 1vw;
+}
+
 .home .main-info {
   color: #707070;
   background: #f8fafc;
@@ -11793,6 +11807,7 @@ body {
 }
 
 .home .side-bar .side-icon label {
+  z-index: 1000000000000;
   opacity: 0;
   position: absolute;
   margin-left: 6.5vw;
@@ -12101,6 +12116,11 @@ body {
 .row-notBS {
   display: grid;
   grid-column-gap: 5px;
+}
+
+.section-names {
+  text-align: center;
+  margin-bottom: 1.5rem;
 }
 
 /*
