ticketing front end shit

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12141,13 +12141,88 @@ body {
   margin-bottom: 1.5rem;
 }
 
-/*
-.row-2{
-  grid-template-columns: repeat(4, 1fr) !important;
+#confirm-order-modal .modal-content {
+  width: 50vw;
 }
 
-.row-3{
-  grid-template-columns: repeat(5, 1fr) !important;
+#confirm-order-modal .modal-content .modal-header h4 {
+  margin: 0;
+  text-align: center;
+  width: 100%;
 }
-*/
+
+#confirm-order-modal .modal-content .modal-body {
+  padding: 2em !important;
+}
+
+#confirm-order-modal .modal-content .modal-body .thanks h5 {
+  text-align: center;
+  font-weight: bold;
+}
+
+#confirm-order-modal .modal-content .modal-body button {
+  width: 100%;
+  margin-top: 5vh;
+}
+
+#confirm-order-modal .modal-content .modal-body .form-span {
+  display: grid;
+  grid-template-columns: 200px 400px;
+  margin-bottom: 3vh;
+}
+
+#confirm-order-modal .modal-content .modal-body .form-span-two {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#confirm-order-modal .modal-content .modal-body .form-span-two .id_number {
+  margin: 1vh;
+}
+
+#confirm-order-modal .modal-content .modal-body .form-span-two .id_number span {
+  margin-right: 1vw;
+}
+
+.confirm-button .loader {
+  margin: 0 auto;
+}
+
+.loader {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
 
