--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11902,25 +11902,45 @@ body {
 }
 
 .ticket-module .ticket-module-head {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
   font-family: Montserrat_Regular;
   background: white;
 }
 
 .ticket-module .ticket-module-head .summary {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding-top: 1vh;
 }
 
-.ticket-module .ticket-module-head .summary .total-price .price {
+.ticket-module .ticket-module-head .summary .price {
   text-align: right;
   padding-right: 1.5vw;
 }
 
-.ticket-module .ticket-module-head .summary .total-price .btn-container {
+.ticket-module .ticket-module-head .summary .btn-container {
   text-align: center;
 }
 
+.ticket-module .ticket-module-head .summary .btn-container button {
+  position: fixed;
+  left: 8%;
+  /* Width: 10%; */
+  bottom: 5px;
+}
+
 .ticket-module .ticket-module-head .summary .summary-container .sale {
+  max-height: 72px;
   text-align: left;
+  overflow: auto;
 }
 
 .ticket-module .ticket-module-head .summary .summary-container .sale .sale-container {
@@ -12072,7 +12092,6 @@ body {
   margin-left: 0;
   display: grid;
   grid-template-columns: 25% 75%;
-  height: 95vh;
 }
 
 .venue {
@@ -12089,6 +12108,11 @@ body {
   border-style: solid;
   border-color: #00000054;
   padding: 1vh;
+}
+
+.absolute-column-counter small {
+  position: absolute;
+  top: 100px;
 }
 
 .seat {
@@ -12120,7 +12144,7 @@ body {
 }
 
 .venue .clickables .clickables-container {
-  margin-left: 3vw;
+  margin-left: 1.5vw;
   font-size: .75em;
   display: grid;
 }
