--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -234,22 +234,34 @@ body{
   //border-style: solid;
   //margin: 10px;
   .ticket-module-head{
+    height: 100%;
+    display: flex;
+    flex-flow: column;
     font-family: Montserrat_Regular; 
     background:white;
     .summary{
+      flex-grow: 1;
       padding-top:1vh;
-      .total-price{
+      //.total-price{
         .price{
           text-align: right;
           padding-right: 1.5vw;
         }
         .btn-container{
-          text-align:center
+          text-align:center;
+          button{
+            position: fixed;
+            left: 8%;
+            /* Width: 10%; */
+            bottom: 5px;
+          }
         }
-      }
+      //}
       .summary-container{
         .sale{
+          max-height:72px;
           text-align:left;
+          overflow: auto;
           .sale-container{
             padding: 0.05vh 1.5vw;
             .sale-ticket-section{
@@ -372,7 +384,7 @@ body{
   margin-left: 0;
   display: grid;
   grid-template-columns: 25% 75%;
-  height: 95vh;
+  //height: 95vh;
 }
 .venue{
   overflow:auto;
@@ -389,6 +401,13 @@ body{
   border-style: solid;
   border-color: #00000054;
   padding: 1vh;
+}
+
+.absolute-column-counter{
+  small{
+    position: absolute;
+    top: 100px;
+  }
 }
 
 .seat{
@@ -417,7 +436,7 @@ body{
 .venue{
   .clickables{
     .clickables-container{
-    margin-left: 3vw;
+    margin-left: 1.5vw;
     font-size:.75em;
     display:grid;
     //grid-template-columns: repeat(3, 1fr);
