--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,13 +55,13 @@ body{
   }
   .main{
     .main-footer{
-      margin: 3vh;
+      margin-bottom: 20px;
+      margin-left: 1.5vw;
       font-weight: bold;
-      font-size: 1.3em;
-      margin-top: 6vh;
+      font-size: 1em;
     }
     .main-top{
-      padding: 7vh 4vw 3vh 1.5vw;
+      padding: 7vh 4vw 0 1.5vw;
       h3{
         display: inline-block;
       }
@@ -73,7 +73,7 @@ body{
       border: 1px;
       //margin-top: 15vh;
       border-style: solid;
-      height: 50vh;
+      height: 60vh;
       box-shadow: 1px 10px 15px rgba(128, 128, 128, 0.6);
       width: 60vw;
       border-color: #c3c0c085;
@@ -365,15 +365,19 @@ body{
       &::after{
         margin-left: 5em;
         color: #b6b4b4;
+        margin-top: 12px; 
       }
       .dropdown-container{
         float:left;
+        display: flex;
+        align-items: center;
+        margin: 5px;
         span{
           color: #b6b4b4;
+          margin-left: 10px;
         }
         img{
           height: 3vh;
-          margin: 5px;
         }
       }
     }
@@ -427,6 +431,11 @@ body{
     content:"";
   }
 }
+
+#popover-seat-info{
+  //top: -20px !important;
+}
+
 .seat-reserved{
   color:white;
   background-color: #2741af;
@@ -436,7 +445,8 @@ body{
 }
 .seat-taken{
   color:white;
-  background-color: #f1b850
+  background-color: #f1b850;
+  cursor: context-menu;
 }
 .venue{
   .clickables{
