--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11887,6 +11887,7 @@ body {
 }
 
 .head .hi-username {
+  cursor: pointer;
   text-align: end;
 }
 
@@ -11900,6 +11901,23 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+#logout {
+  position: absolute;
+  top: 10vh;
+  left: 82vw;
+  z-index: 10000000;
+  /* font-weight: bold; */
+  cursor: pointer;
+  /* border: 10px; */
+  border-color: #d8d8d8;
+  padding: 2px 10px 2px 10px;
+  border-top-width: 1px;
+  border-left-width: 1px;
+  border-bottom-width: 1px;
+  border-right-width: 1px;
+  border-style: solid;
 }
 
 .ticket-module .ticket-module-head {
