--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -222,6 +222,7 @@ body{
     font-size: 1.5vw;
   }
   .hi-username{
+    cursor:pointer;
     text-align: end;
     .username{
       display: flex;
@@ -229,6 +230,23 @@ body{
       justify-content: flex-end;
     }
   }
+}
+
+#logout{
+  position: absolute;
+  top: 10vh;
+  left: 82vw;
+  z-index: 10000000;
+  /* font-weight: bold; */
+  cursor: pointer;
+  /* border: 10px; */
+  border-color: #d8d8d8;
+  padding: 2px 10px 2px 10px;
+  border-top-width: 1px;
+  border-left-width: 1px;
+  border-bottom-width: 1px;
+  border-right-width: 1px;
+  border-style: solid;
 }
 
 .ticket-module{
@@ -415,6 +433,7 @@ body{
     top: 100px;
   }
 }
+
 
 .seat{
   display: flex;
