--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -501,6 +501,15 @@ body{
   //top: -20px !important;
 }
 
+#ticket-info-modal{
+  input{
+    margin-left: 10px;
+    margin-bottom: 20px;
+    display: inline-block;
+    width: 40%
+  }
+}
+
 .seat-reserved{
   color:white;
   background-color: #2741af;
