--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11979,6 +11979,14 @@ body {
   padding-top: 1vh;
 }
 
+.ticket-module .ticket-module-head .summary .clear-order {
+  float: left;
+  margin-left: 10px;
+  color: red;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 .ticket-module .ticket-module-head .summary .price {
   text-align: right;
   padding-right: 1.5vw;
