--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -265,10 +265,16 @@ body{
   }
 }
 
+#logout:hover{
+  background-color: #8080801f;
+}
 #logout{
+  transition: background-color 1s;
+  width: 15vw;
+  text-align: center;
   position: absolute;
   top: 10vh;
-  left: 82vw;
+  left: 75vw;
   z-index: 10000000;
   /* font-weight: bold; */
   cursor: pointer;
