--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -661,6 +661,13 @@ body{
   animation: spin 2s linear infinite;
 }
 
+.edit-dropdown{
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: 25px;
+  margin-top: 10px;
+}
+
 /* Safari */
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
