--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12388,6 +12388,13 @@ body {
   animation: spin 2s linear infinite;
 }
 
+.edit-dropdown {
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: 25px;
+  margin-top: 10px;
+}
+
 /* Safari */
 
 @-webkit-keyframes spin {
