--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -523,6 +523,9 @@ body{
   }
 }
 
+.vip{
+  box-shadow: 1px 1px 10px 1px #a98401a1 inset;
+}
 .seat-reserved{
   color:white;
   background-color: #2741af;
