--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -524,18 +524,18 @@ body{
 }
 
 .vip{
-  box-shadow: 1px 1px 10px 1px #a98401a1 inset;
+  box-shadow: 1px 1px 10px 1px #a98401 inset;
 }
 .seat-reserved{
   color:white;
-  background-color: #2741af;
+  background-color: #f1b850; //#2741af;
 }
 .seat-not-taken{
   background-color: white;
 }
 .seat-taken{
   color:white;
-  background-color: #f1b850;
+  background-color: #2741af; //#f1b850;
   cursor: context-menu;
 }
 .venue{
